# culebra_resume

./: .gitignore  docker-compose.yml  pyproject.toml
culebra_resume/: config.py  main.py
culebra_resume/config/: database.py
culebra_resume/endpoints/: endpoints.py  resume_endpoint.py  user_endpoint.py
culebra_resume/models/: education_model.py  experience_model.py  hability_model.py  transaction_model.py  user_model.py
culebra_resume/resume/: create_pdf.py
culebra_resume/services/: curriculum.py
templates/: basic.html
