[tool.poetry]
name = "culebra-resumme"
version = "0.0.1"
description = "Fullstack project created to help with resume creation."
authors = ["Fritz Henrique <fritzhenrique.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.5"}
uvicorn = "^0.32.0"
pdfkit = "^1.0.0"
sqlmodel = "^0.0.22"
pymysql = "^1.1.1"
cryptography = "^43.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
